--- a/PriceTag/app/src/main/res/values/strings.xml
+++ b/PriceTag/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_list_places">ListPlaces</string>
+    <string name="title_activity_login">Login</string>
 
 </resources>
