Refactoring Localization and adding onPause and onResume on main activity

--- a/PriceTag/app/src/main/res/values/strings.xml
+++ b/PriceTag/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="activity_price_tag_descricao_label">Resultado</string>
     <string name="activity_price_tag_latitude_label">Latitude</string>
     <string name="activity_price_tag_longitude_label">Longitude</string>
+    <string name="activity_price_tag_localization">activity_price_tag_localization</string>
 
 </resources>
